--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- custom css file-->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- Js -->
+    <link rel="stylesheet" href="./js/navbar.js">
+
+
 </head>
 
 <body>
@@ -56,11 +60,20 @@
             </nav>
         </div>
     </header>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+              <img src="./img/banner.jpg" class="d-block w-100" alt="...">
+          </div>
+      </div>
+    </div>
 
 
     <!-- Jquery file -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 
+    <!-- Popper.js -->
+    <script src="./node_modules/popper.js/dist/popper.min.js"></script>
 
     <!-- Bootstrap js file -->
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
